--- a/ecommerce/src/Components/Offers/Offers.css
+++ b/ecommerce/src/Components/Offers/Offers.css
@@ -54,7 +54,7 @@
     height: 40vh;
     margin-bottom: 50px;
     margin-top: 50px;
-    gap: 20px;
+    gap: 8px;
   }
 
   .offers-left h1 {
